[gd_scene load_steps=17 format=3 uid="uid://bgufflynit8i7"]

[ext_resource type="Script" uid="uid://by08gaj4vrn62" path="res://UI/dataset_panel.gd" id="1_cxifj"]
[ext_resource type="PackedScene" uid="uid://b4r7lgiro2h56" path="res://UI/range_element.tscn" id="2_pfyhj"]
[ext_resource type="Script" uid="uid://b74xx0p3p7ps7" path="res://UI/graph_draw.gd" id="3_mb7q5"]
[ext_resource type="PackedScene" uid="uid://dam3sdw47yb8h" path="res://UI/OutputRange.tscn" id="4_vvr58"]
[ext_resource type="Script" uid="uid://dkcrhgpuowcmu" path="res://UI/draw_output.gd" id="5_45th3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfyhj"]
bg_color = Color(0.16924527, 0.1692453, 0.16924521, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxifj"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(0.3529412, 0.13725491, 0.32156864, 1)
border_width_right = 3
border_color = Color(0.49354547, 0.4935456, 0.4935453, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.096204735, 0.09620475, 0.096204735, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45th3"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4k3ys"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 3
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvr58"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(0.3180199, 0.31801975, 0.31801975, 0.5058824)
border_width_right = 3
border_color = Color(0.49354547, 0.4935456, 0.4935453, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.096204735, 0.09620475, 0.096204735, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr5hk"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.22344898, 0.22344898, 0.22344898, 0.99607843)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wadu"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.29219002, 0.29219005, 0.29218993, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufqdb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyq0f"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(0.3529412, 0.13725491, 0.32156864, 1)
border_width_right = 3
border_color = Color(0.49354547, 0.4935456, 0.4935453, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.096204735, 0.09620475, 0.096204735, 0.6)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mb7q5"]
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0.099985994, 0.099985994, 0.099985994, 0.6)
shadow_size = 3
shadow_offset = Vector2(1.63, 1.93)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mb7q5"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0

[node name="DatasetPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 326.0
offset_bottom = 1243.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cxifj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pfyhj")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 950)
layout_mode = 2
theme_override_constants/separation = 15

[node name="OptionsBox" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(270, 55)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cxifj")

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 3.0
offset_right = 245.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 33
text = "Dataset creation"

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DataNormButton" type="LineEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Control"]
layout_mode = 0
offset_left = 518.0
offset_top = 220.0
offset_right = 586.5625
offset_bottom = 254.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_45th3")
text = "10"
placeholder_text = "10"
alignment = 1
virtual_keyboard_type = 2
caret_blink = true

[node name="Input ranges" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4k3ys")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Input ranges"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 440.0
offset_bottom = 46.0
theme_override_constants/separation = 139

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Input ranges/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Input ranges"

[node name="DataNorm" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "When toggled, the input ranges will be mapped using values from (0;1)."
theme_override_styles/panel = SubResource("StyleBoxFlat_vvr58")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DataNorm"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 586.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DataNorm/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Data normalization"

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DataNorm/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DataNormButton" type="CheckButton" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DataNorm/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 29
theme_override_styles/focus = SubResource("StyleBoxFlat_45th3")
icon_alignment = 2

[node name="DDS" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "When toggled, the samples will be taken from the middle of the N-th range in all input ranges. Otherwise it will be a stohastic sampling."
theme_override_styles/panel = SubResource("StyleBoxFlat_vvr58")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DDS"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 586.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DDS/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Deterministic data sampling"

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DDS/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DataNormButton" type="CheckButton" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/DDS/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_45th3")
alignment = 1

[node name="SplitN" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "The amount of ranges in which all input ranges will be split. (Integer >= Input ranges)"
theme_override_styles/panel = SubResource("StyleBoxFlat_vvr58")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/SplitN"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 586.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/SplitN/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Split step"

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/SplitN/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SplitStep" type="LineEdit" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/SplitN/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_45th3")
text = "10"
placeholder_text = "10"
alignment = 1
virtual_keyboard_type = 2
caret_blink = true

[node name="Control2" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sr5hk")
scroll_vertical_custom_step = 0.1
horizontal_scroll_mode = 0

[node name="Ranges" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Range" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/ScrollContainer/Ranges" instance=ExtResource("2_pfyhj")]
layout_mode = 2

[node name="AddRange" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_vvr58")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/AddRange"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 586.0
offset_bottom = 44.0
alignment = 1

[node name="Button" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/AddRange/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_3wadu")
theme_override_styles/focus = SubResource("StyleBoxFlat_ufqdb")
text = "+"

[node name="line" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4k3ys")

[node name="Generate" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_eyq0f")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Generate"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 586.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Generate/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Generate IR"

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Generate/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenerateButton" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Generate/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_3wadu")
theme_override_styles/focus = SubResource("StyleBoxFlat_ufqdb")
text = "Generate"

[node name="Panel2" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mb7q5")

[node name="GraphDisplay" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/GraphDisplay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mb7q5")
text = "Input ranges' 2D hypercube representation: split_steps: 10, data_norm: false, dds: false"
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/GraphDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/GraphDisplay/MarginContainer"]
layout_mode = 2
script = ExtResource("3_mb7q5")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 950)
layout_mode = 2
theme_override_constants/separation = 15

[node name="OptionsBox" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Output ranges" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4k3ys")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/Output ranges"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 440.0
offset_bottom = 46.0
theme_override_constants/separation = 139

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/Output ranges/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Output ranges"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 20
text = "Index of step : Wanted activation (Hz)

Please make sure to have at least a value at index 0 and at the amount of split steps (Default is 10, e.g. 0:0, 10:10)"
fit_content = true

[node name="Control2" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sr5hk")
scroll_vertical_custom_step = 0.1
horizontal_scroll_mode = 0

[node name="Ranges" type="VBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OutputRange" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/ScrollContainer/Ranges" instance=ExtResource("4_vvr58")]
layout_mode = 2

[node name="AddRange" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_vvr58")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/AddRange"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 586.0
offset_bottom = 44.0
alignment = 1

[node name="AddORButton" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/AddRange/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_3wadu")
theme_override_styles/focus = SubResource("StyleBoxFlat_ufqdb")
text = "+"

[node name="line" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4k3ys")

[node name="Generate" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_eyq0f")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/Generate"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 586.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/Generate/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Generate OR"

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/Generate/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenerateButtonOR" type="Button" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/Generate/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_3wadu")
theme_override_styles/focus = SubResource("StyleBoxFlat_ufqdb")
text = "Generate"

[node name="Panel2" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mb7q5")

[node name="GraphDisplay" type="Panel" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/GraphDisplay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mb7q5")
text = "Output ranges' 2D hypercube representation"
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/GraphDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Control" type="Control" parent="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/GraphDisplay/MarginContainer"]
layout_mode = 2
script = ExtResource("5_45th3")

[connection signal="text_submitted" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/SplitN/HBoxContainer/SplitStep" to="." method="_on_split_step_text_submitted"]
[connection signal="pressed" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/AddRange/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsBox/Generate/HBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/AddRange/HBoxContainer/AddORButton" to="." method="_on_add_or_button_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/OptionsBox/Generate/HBoxContainer/GenerateButtonOR" to="." method="_on_generate_button_or_pressed"]
